#-----------------------------------------------------------------
# Changes for Module::CPANTS::ProcessCPAN
#-----------------------------------------------------------------

0.77-tobe
    - added ResultSetManager to schema classes
    - moved lots of model-related stuff from Module::CPANTS::Site
      Controllers into Module::CPANTS::ExtractUse::Schema::*
      (marcus.ramberg)
    - fixed bug with is_extra/is_experimental in game rank calculation


0.76   Sat Apr 12 10:53:53 CEST 2008
    - added kwalitee_overview to graphs
    - adapted db & schema for new metrics


0.75    Tue Apr  8 01:20:03 CEST 2008
    * released at the Oslo QA Hackathon 2008
    - fixed Test::Pod* problem in build_requires
    - do not include perl version numbers in prereq checks
    - renamed lots of error names to better work with frontend
    - some minor fixes in various scripts


0.74    2008-04-06
    * released at the Oslo QA Hackathon 2008
    - fixed some scripts that still were using the old SQLite interface
    - updated schema
    - fixed prereq_matches_* metrics
    - fixed dependecies


0.73	2008-01-29
    - migrated to postgres


0.72    2007-11-14
    - new metrics 'prereq_matches_use' and 'build_prereq_matches_use'
    - applied patch submitted by Brian Cassidy to remove unneeded
      Data::Dumper statements
    - re-enabled distgraphs
    - fixed a bug which caused old YAML files to be read. Reported by
      Barbie: http://use.perl.org/comments.pl?sid=37394&cid=58683


0.71    2007-10-29
    - re-added make_graph.pl and update_authors.pl to run.pl
    - fixed prereq/uses DB filling
    - fixed some other DB errors
    - adapted to changes in MC::Analyse 0.75
    - cleaned up analyse_cpan.pl
    - added Module::CPANTS::MyBuild to properly install cpants


0.70    2007-10-24
    - install cpants properly
    - moved to SQLite instead of postgres
    - switched to YAML::Syck
    - added process_yaml.pl
    - dont use DB for analyse_cpan.pl