@@ -1,0 +1,3 @@
+alter table dist add no_index text;
+alter table dist add ignored_files_list text;
+
